[package]
name = "drum_stacean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.127.0"
piston2d-opengl_graphics = "0.82.0"
piston-music = "0.26.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["mixer"]
